# rfirewall

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
rfirewall/: Cargo.toml
rfirewall-client/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.ts
rfirewall-client/src-tauri/: Cargo.toml  tauri.conf.json
rfirewall-client/src-tauri/src/: main.rs
rfirewall-client/src/app/: layout.tsx  page.tsx
rfirewall-client/src/app/add-rule/: page.tsx
rfirewall-client/src/components/header/: header.tsx
rfirewall/src/: lib.rs  main.rs  userinput.rs
rfirewall/src/config/: mod.rs
rfirewall/src/core/: firewall.rs  mod.rs  packet_handler.rs  rule.rs
rfirewall/src/infrastructure/: config.rs  mod.rs  monitor.rs  network.rs  rule.rs
rfirewall/src/interfaces/: logger_interface.rs  mod.rs  network_interface.rs  userinput.rs
rfirewall/src/monitor/: package_monitor.rs
rfirewall/src/rules/: add_rules.rs
src/: main.rs  userinput.rs
src/config/: config_files.rs
src/monitor/: logger.rs  mod.rs  package_monitor.rs
src/rules/: get_rules.rs  mod.rs  model.rs
