[package]
name = "rfirewall"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
ctrlc = "3.4.5"
dirs-next = "2.0.0"
pnet = "0.35.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0.127"
signal-hook = "0.3.17"